# float

./: .detoxrc.js  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND_QUALITY.md  LICENSE  PHASE_1_COMPLETION_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_4_SUMMARY_FINAL.md  PHASE_5_SUMMARY.md  PHASE_6_FINAL_REVIEW.md  PHASE_6_REVIEWER_FEEDBACK.md  PHASE_6_SUMMARY.md  PLAN_REVIEW.md  README.md  TESTING.md  app.config.js  check_frontend_quality.sh  cleanup-list.txt  commitlint.config.js  docker-compose.yml  final-structure.txt  jest.globals.js  jest.setup.js  package-lock.json  package.json  refactor-monorepo.sh  strip-comments.sh  tsconfig.json  type_check_output.txt
.claude/: skill-runs.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: backend-tests.yml  ci.yml  deploy-backend-production.yml  deploy-backend-staging.yml  frontend-tests.yml  release.yml
__tests__/integration/: meditation-flow-test.tsx  setup.ts  test-utils.tsx
app/: +html.tsx  _layout.tsx
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
backend/: .coverage  .coveragerc  .deploy-config.json.template  .env.deploy.example  .env.example  .gitignore  Dockerfile  Makefile  PHASE_2_ITERATION_2_COMPLETE.md  QUALITY.md  README.md  check_quality.sh  colors.py  combine_voice.py  coverage_baseline.txt  coverage_report.txt  eleven.py  gemini.py  lambda_function.py  mypy.ini  mypy_output.txt  openai_voice.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  samconfig.toml  template.yaml  tts.py
backend/scripts/: deploy-helpers.sh  deploy.mjs  deploy.sh  logs.sh  validate.sh
backend/src/: exceptions.py
backend/src/config/: constants.py  settings.py
backend/src/float_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/handlers/: __init__.py  handler_facade.py  job_handler.py  lambda_handler.py  meditation_handler.py  meditation_pipeline.py  middleware.py  router.py  routes.py  summary_handler.py
backend/src/models/: domain.py  job_state.py  lambda_event.py  requests.py  responses.py
backend/src/providers/: __init__.py  eleven_labs_tts.py  gemini_tts.py  google_tts.py  openai_tts.py
backend/src/services/: ai_service.py  audio_service.py  download_service.py  ffmpeg_audio_service.py  gemini_service.py  hls_service.py  job_service.py  s3_storage_service.py  service_factory.py  storage_service.py  tts_service.py
backend/src/services/audio/: __init__.py  audio_mixer.py  duration_probe.py  hls_batch_encoder.py  hls_stream_encoder.py  music_selector.py
backend/src/utils/: audio_utils.py  cache.py  circuit_breaker.py  color_utils.py  file_utils.py  logging_utils.py  security.py  validation.py
backend/test-requests/: meditation-request.json
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  conftest.py  test_meditation_flow.py  test_summary_flow.py
backend/tests/fixtures/: sample-deploy-config.json  sample-stack-outputs.json  sample_data.py
backend/tests/integration/: conftest.py  test_config.py  test_gemini_integration.py  test_hls_integration.py  test_lambda_initialization.py  test_s3_integration.py  test_tts_integration.py
backend/tests/mocks/: external_apis.py
backend/tests/unit/: test_cache.py  test_circuit_breaker.py  test_deploy_helpers.py  test_download_service.py  test_exceptions.py  test_hls_service.py  test_lambda_handler.py  test_middleware.py  test_models.py  test_request_validation.py  test_services.py  test_utils.py
components/: AudioRecording.tsx  AuthScreen.tsx  BackendMeditationCall.tsx  BackendSummaryCall.tsx  Collapsible.tsx  IncidentColoring.tsx  LocalFileLoadAndSave.tsx  Notifications.tsx  ParallaxScrollView.tsx  PlayMeditation.tsx  ThemedText.tsx  history.tsx
components/ScreenComponents/: Guidance.tsx  IncidentItem.tsx  MeditationControls.tsx  RecordButton.tsx  SubmitButton.tsx
components/__tests__/: AudioRecording-test.tsx  BackendMeditationCall-test.tsx  BackendSummaryCall-test.tsx  Collapsible-test.tsx  Guidance-test.tsx  IncidentColoring-test.tsx  IncidentItem-test.tsx  LocalFileLoadAndSave-test.tsx  MeditationControls-test.tsx  ParallaxScrollView-test.tsx  ThemedView-test.tsx
components/navigation/: TabBarIcon.tsx
constants/: Colors.ts  StylesConstants.ts  StylesConstants.tsx  util.ts
context/: AuthContext.tsx  IncidentContext.tsx
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
docs/: API.md  ARCHITECTURE.md  CI_CD.md  DEPLOYMENT.md  DEVELOPMENT.md  HLS_STREAMING.md  PHASE-4-REVIEW.md  PRODUCTION_READINESS.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  TESTING.md  backend-integration-testing.md  backend-readme.md  e2e-testing.md  infrastructure-deploy.md  infrastructure-readme.md  integration-testing.md
docs/adr/: 0006-sam-infrastructure-as-code.md  0007-http-api-gateway.md  0008-environment-variables-secrets.md  0009-comprehensive-testing-strategy.md  0010-e2e-testing-framework.md  README.md
docs/backend/: INTEGRATION_TESTING.md  PHASE_2_SUMMARY.md  PHASE_3_COMPLETE.md  QUALITY.md
docs/infrastructure/: DEPLOYMENT_STATUS.md  README.md
docs/plans/: FEEDBACK_REVISIONS.md  Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  Phase-6.md  README.md
e2e/: README.md  complete-user-journey.e2e.ts  error-scenarios.e2e.ts  jest.config.js
frontend/: .detoxrc.js  .env.example  .eslintrc.json  app.config.js  eslint.config.js  jest.globals.js  jest.setup.js  package-lock.json  package.json  tsconfig.test.json
frontend/app/: +html.tsx  +not-found.tsx  _layout.tsx
frontend/components/: AudioRecording.tsx  AuthScreen.tsx  BackendMeditationCall.tsx  BackendSummaryCall.tsx  Collapsible.tsx  ErrorBoundary.tsx  IncidentColoring.tsx  LocalFileLoadAndSave.tsx  Notifications.tsx  ParallaxScrollView.tsx  StreamingError.tsx  ThemedText.tsx  ThemedView.tsx  backendMeditationCallHelpers.ts  history.tsx
frontend/constants/: Colors.ts  StylesConstants.tsx  util.ts
infrastructure/: .gitignore  DEPLOYMENT.md  README.md  package.json  samconfig.toml  template.yaml
scripts/: deploy.sh
(+184 files in other folders)
