[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "float-backend"
version = "1.0.0"
description = "Float meditation app backend services"
requires-python = ">=3.12"
authors = [
    {name = "Float Team", email = "gemenielabs@gmail.com"}
]
license = {text = "Apache-2.0"}

dependencies = [
    "annotated-types==0.7.0",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "google-ai-generativelanguage==0.6.6",
    "google-api-core==2.19.1",
    "google-api-python-client==2.141.0",
    "google-auth==2.33.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.7.2",
    "googleapis-common-protos==1.63.2",
    "grpcio==1.65.4",
    "grpcio-status==1.62.3",
    "httplib2==0.22.0",
    "idna==3.7",
    "proto-plus==1.24.0",
    "protobuf>=5.29.4",
    "pyasn1==0.6.0",
    "pyasn1_modules==0.4.0",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "pydub==0.25.1",
    "pyparsing==3.1.2",
    "python-dotenv==1.0.1",
    "requests>=2.32.4",
    "rsa==4.9",
    "tqdm==4.66.5",
    "typing_extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3>=2.5.0",
    "google-cloud-texttospeech==2.16.5",
    "jinja2",
    "boto3",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.5.0",
    "types-requests",
    "types-python-dateutil"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
