[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "float-backend"
version = "1.0.0"
description = "Float meditation app backend services"
requires-python = ">=3.12"
authors = [
    {name = "Float Team", email = "gemenielabs@gmail.com"}
]
license = {text = "Apache-2.0"}

dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-texttospeech>=2.16.0",
    "protobuf>=5.29.4",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "requests>=2.33.0",
    "urllib3>=2.3.0",
    "jinja2",
    "boto3",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.5.0",
    "types-requests",
    "types-python-dateutil"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
    "e2e: end-to-end tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (includes F841 unused variables)
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade (modernize Python syntax)
    "B",    # flake8-bugbear (catches common bugs)
    "S",    # flake8-bandit (basic security checks: shell injection, partial paths, etc.)
]
ignore = [
    "E501",   # Line too long (handled by black)
    "S603",   # subprocess call - check for execution of untrusted input (too noisy for FFmpeg)
    "S607",   # starting a process with a partial executable path
    "S108",   # /tmp usage — Lambda runs in /tmp by design, cannot use tempfile module
    "S311",   # pseudo-random generators — used for non-security purposes (jitter, IDs)
    # Plan 2026-04-08-audit-float Phase 5 Task 3: violator counts measured
    # 2026-04-08 via `uvx ruff check --select <rule> .`. Modernization is
    # deferred to a separate plan (see Phase 0 "Out of Scope" item 6); the
    # counts below document the debt so the next plan can size the work.
    "UP006",  # 152 violators: builtin type vs `List`/`Dict`; defer to modernization plan
    "UP045",  # 83 violators: `X | None` vs `Optional[X]`; defer to modernization plan
    "UP035",  # 49 violators: deprecated `typing` imports; defer to modernization plan
    "UP007",  # 4 violators: `X | Y` vs `Union[X, Y]`; defer to modernization plan
    "UP017",  # 3 violators: `datetime.UTC` vs `datetime.timezone.utc`; defer
    "UP024",  # 2 violators: aliased errors vs `OSError`; defer
    "UP028",  # 3 violators: `yield from` refactor; defer
    "UP015",  # 1 violator: unnecessary open mode parameter; defer
    "UP046",  # 1 violator: `type` vs `TypeAlias`; defer
    "B017",   # `assertRaises(Exception)` too broad — pre-existing in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is expected in test files

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
